package spring.jpa.centre_formation.entity;

/**
 * Enumération des rôles utilisateurs dans le système
 */
public enum Role {
    ADMIN,
    FORMATEUR,
    ETUDIANT
}

